Sonar warnings (#302)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>